Création de la route DELETE /session/{id}
