# public/swagger/swagger.json
@@ -1183,6 +1183,41 @@
                         "description": "Non trouvée..."
                     }
                 }
+            },
+            "delete": {
+                "tags": [
+                    "Sessions"
+                ],
+                "operationId": "App\\Controller\\SessionController::deleteSession",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "id Session",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "request": "sessions",
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/Session"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Session supprimée !"
+                    },
+                    "404": {
+                        "description": "Non trouvée..."
+                    }
+                }
             }
         }
     },
